--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,14 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- or latest stable -->
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
